# ok-duet-night-abyss

./: .gitignore  .gitmodules  main.py  main_debug.py  pyappify.yml  pyproject.toml  requirements.txt  run_ok_dna.ps1
.github/workflows/: build.yml
assets/: coco_annotations.json
i18n/en_US/LC_MESSAGES/: ok.mo  ok.po
i18n/es_ES/LC_MESSAGES/: ok.mo  ok.po
i18n/ja_JP/LC_MESSAGES/: ok.mo  ok.po
i18n/ko_KR/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_CN/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_TW/LC_MESSAGES/: ok.mo  ok.po
src/: LabelEnum.py  config.py  disguise.py  disguise_peb.py  globals.py
src/tasks/: AutoDefence.py  AutoExploration.py  AutoGeneral.py  AutoHedge.py  BaseDNATask.py  CommissionsTask.py
src/tasks/config/: CommissionConfig.py  CommissionSkillConfig.py
tests/: TestMissonInterface.py
